# tb-perf

./: .gitignore  Cargo.toml  Dockerfile.claude  PLAN.md  README.md  config.cloud-tigerbeetle-fixedrate.toml  config.local-postgresql-atomic.toml  config.local-postgresql-batched.toml  config.local-postgresql.toml  config.local-tigerbeetle.toml  config.quick-postgresql-atomic.toml  config.quick-postgresql-batched.toml  config.quick-postgresql.toml  config.quick-tigerbeetle.toml  config.sanity-postgresql-atomic.toml  config.sanity-postgresql-batched.toml  config.sanity-postgresql.toml  config.sanity-tigerbeetle.toml
.claude/agents/: abstraction-reviewer.md  aws-devops-expert.md  code-functionality-reviewer.md  perf-test-plan-reviewer.md  readability-reviewer.md  rust-backend-engineer.md
.claude/commands/: fix.md
client/: Cargo.toml
client/src/: main.rs  metrics.rs  postgres.rs  tigerbeetle.rs  workload.rs
common/: Cargo.toml
common/src/: config.rs
coordinator/: Cargo.toml
coordinator/src/: docker.rs  main.rs  postgres_setup.rs  prometheus.rs  results.rs  run_context.rs  test_runner.rs  tigerbeetle_setup.rs
docker/: README.md  docker-compose.postgresql.yml  docker-compose.tigerbeetle.yml  otel-collector-config.yaml  prometheus.yml
docs/: ISOLATION_LEVEL_ANALYSIS.md
grafana/: README.md
grafana/dashboards/: performance.json
local-results/: 2016-01-17-sanity-local-summary.txt  2026-01-16-postgres-atomic.csv  2026-01-16-postgres-batched.csv  2026-01-16-postgres-standard.csv  2026-01-16-tigerbeetle.csv  2026-01-17-local-detail.csv  2026-01-17-local.csv  2026-01-18-postgres-batched-quick.csv  2026-01-18-tigerbeetle-quick.csv  2026-01-18-tigerbeetle.csv  2026-01-19-normal-comparison.csv  2026-01-19-postgres-atomic-quick-fixed.csv  2026-01-19-postgres-atomic-quick.csv  2026-01-19-postgres-standard-quick.csv  plot_2d_results.py  plot_normal_comparison.py  plot_postgres_atomic_quick.py  plot_postgres_atomic_quick_fixed.py  plot_postgres_batched_quick.py  plot_postgres_standard_quick.py  plot_quick_results.py  plot_results.py
scripts/: README.md  build-sandbox.sh  init-postgresql.sql  run-local.sh  run-postgres-atomic-sanity.sh  run-postgres-batched-sanity.sh  run-postgres-sanity.sh  run-sandbox.sh  run-sanity.sh  run-tigerbeetle-sanity.sh  stop-docker.sh  test-batch-transfers.sql  tigerbeetle-local.sh
terraform/: README.md
