[package]
name = "tb-perf-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
tb-perf-common = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database clients
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
tigerbeetle-unofficial = { workspace = true }

# Workload generation
rand = { workspace = true }
rand_distr = { workspace = true }

# Metrics
hdrhistogram = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
